--- a/code/test_file.ipynb
+++ b/code/test_file.ipynb
@@ -805,11 +805,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ab746e05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "\n",
+    "# Create the first logger\n",
+    "logger1 = logging.getLogger('status_logger')\n",
+    "logger1.setLevel(logging.INFO)\n",
+    "handler1 = logging.FileHandler('status_log.log')\n",
+    "logger1.addHandler(handler1)\n",
+    "\n",
+    "# Create the second logger\n",
+    "logger2 = logging.getLogger('error_logger')\n",
+    "logger2.setLevel(logging.ERROR)\n",
+    "handler2 = logging.FileHandler('error_log.log')\n",
+    "formatter2 = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "handler2.setFormatter(formatter2)\n",
+    "logger2.addHandler(handler2)"
+   ]
   }
  ],
  "metadata": {
