removed private data

--- a/code/applications_bot_draft_1.ipynb
+++ b/code/applications_bot_draft_1.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "linkedin_url = \"https://www.linkedin.com\"\n",
     "username = \"ganesh_012@outlook.com\"\n",
-    "password = \"Password123\"\n",
+    "password = \n",
     "role = \"Video Editor\"\n",
     "location = \"United States\""
    ]
