--- a/code/test_file.ipynb
+++ b/code/test_file.ipynb
@@ -23,6 +23,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c236237",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is america \\n this is america'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'this is america \\n this is america'\n",
+    "a\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f21c6bb1",
    "metadata": {},
@@ -106,8 +129,7 @@
     "        \n",
     "        \n",
     "username = \"ganesh_012@outlook.com\"\n",
-    "password = \"Password123\"\n",
-    "     \n",
+    "password = \n",
     "        \n",
     "username_field = driver.find_element(    \"xpath\" ,  \"//input[@id='username']\")\n",
     "password_field = driver.find_element (  \"xpath\" ,  \"//input[@id ='password']\")\n",
