--- a/phase_2/rag_app.ipynb
+++ b/phase_2/rag_app.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = \"sk-proj-wHgzBAXNzyYgUZVAQjKoT3BlbkFJLVG9HaURUqUDerDQ7iqt\"\n",
+    "OPENAI_API = \"sk-proj-wHgzBAXNzyYgUZVAQjKoT3BlbkFJLVG9HaURUqUDerDQ7iqt\"\n",
     "\n",
     "\n",
     "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
