--- a/phase_2/tester_code.ipynb
+++ b/phase_2/tester_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,9 @@
     "import json\n",
     "# Set the path to your downloaded Edge WebDriver executable\n",
     "\n",
-    "edge_driver_path = r\"C:\\Users\\localadmin\\Desktop\\myprojects\\linkedinsucks\\linkedinsucks\\code\\msedgedriver.exe\" \n",
-    "edge_service = Service(edge_driver_path)\n",
+    "\n",
     "# Initialize the Edge WebDriver\n",
-    "driver = webdriver.Edge(service=edge_service)\n",
+    "driver = webdriver.Edge()\n",
     "driver.implicitly_wait(randint(1,3))\n",
     "\n",
     "# Initialize the Edge Service"
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +83,31 @@
     "multiline_fields = form.find_elements(\"xpath\" , \".//div[@data-test-multiline-text-form-component='']\")\n",
     "checkbox = form.find_element(\"xpath\" , \".//fieldset[@data-test-checkbox-form-component='true']\") "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class=\"relative \" data-test-single-typeahead-entity-form-component=\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autofills = form.find_elements(\"xpath\" , \".//div[@data-test-single-typeahead-entity-form-component='']\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
