made new agentic rag api

--- a/agentic rag trials/resume_prep.ipynb
+++ b/agentic rag trials/resume_prep.ipynb
@@ -2,23 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "resume_path = r\"C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\linkedin_easyapply_bot\\all_data\\docs\\ganeshrajk_resume_Sept.pdf\"\n",
-    "json_path = r\"C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\linkedin_easyapply_bot\\all_data\\docs\\questions.json\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detailed summary saved to C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\linkedin_easyapply_bot\\all_data\\docs\\resume_detailed.txt\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
-    "import openai\n",
+    "import os\n",
     "import PyPDF2\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "# Paths to files\n",
+    "resume_path = r\"C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\linkedin_easyapply_bot\\all_data\\docs\\ganeshrajk_resume_Sept.pdf\"\n",
+    "json_path = r\"C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\linkedin_easyapply_bot\\all_data\\docs\\questions.json\"\n",
+    "detailed_resume_path = r\"C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\linkedin_easyapply_bot\\all_data\\docs\\resume_detailed.txt\"\n",
+    "secrets_path = r\"C:\\Users\\localadmin\\Desktop\\new desktop\\linkedinsucks\\user_files\\secrets.json\"\n",
+    "\n",
+    "# Load API key from secrets file\n",
+    "with open(secrets_path, 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "OPENAI_API_KEY = data[\"OPENAI_KEY\"]\n",
+    "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
+    "\n",
+    "# Initialize OpenAI client\n",
+    "client = OpenAI()\n",
     "\n",
     "# Function to extract text from PDF file (resume)\n",
     "def extract_text_from_pdf(pdf_file_path):\n",
@@ -40,14 +54,10 @@
     "def generate_detailed_summary(pdf_text, json_data, openai_api_key):\n",
     "    # Combine PDF text and JSON data into a detailed prompt\n",
     "    prompt = f\"\"\"\n",
-    "    You are provided with a person's resume and their answers to questions from a job application. \n",
-    "    Please extract the following details:\n",
-    "    - Experience with each skillset mentioned in the resume or Q&A.\n",
-    "    - The person's location, phone number, and email address.\n",
-    "    - The person's relocation preference, if mentioned.\n",
-    "    - The person's gender, if indicated.\n",
-    "    - Any other details relevant to a job application.\n",
-    "\n",
+    "    You are given a resume of a job applicant. \n",
+    "    Extract as much information from the resume as possible. \n",
+    "    Analyze the resume thoroughly and rewrite the resume in a more detailed and elaborated format. \n",
+    "    Also generate all possible questions and answers based on the information provided in the resume. \n",
     "    PDF (Resume) Content:\n",
     "    {pdf_text}\n",
     "\n",
@@ -55,22 +65,20 @@
     "    {json.dumps(json_data, indent=2)}\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Set up OpenAI GPT-4 API call\n",
-    "    openai.api_key = openai_api_key\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=\"gpt-4\",\n",
+    "    # Call GPT-4 using the new OpenAI API syntax\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4\",  # Change the model to \"gpt-4\" if needed\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that summarizes job applicant profiles.\"},\n",
     "            {\"role\": \"user\", \"content\": prompt},\n",
-    "        ],\n",
-    "        max_tokens=2000  # Adjust based on expected response size\n",
+    "        ]\n",
     "    )\n",
     "    \n",
     "    # Extract and return the generated summary\n",
-    "    return response['choices'][0]['message']['content']\n",
+    "    return response.choices[0].message.content\n",
     "\n",
     "# Main function to process PDF, JSON, and generate the detailed summary\n",
-    "def main(pdf_file_path, json_file_path, openai_api_key, output_file_path=\"resume_detailed.txt\"):\n",
+    "def main(pdf_file_path, json_file_path, openai_api_key, output_file_path=detailed_resume_path):\n",
     "    # Extract text from the PDF (resume)\n",
     "    pdf_text = extract_text_from_pdf(pdf_file_path)\n",
     "    \n",
@@ -90,10 +98,10 @@
     "if __name__ == \"__main__\":\n",
     "    pdf_file = resume_path  # Path to the resume PDF file\n",
     "    json_file = json_path   # Path to the Q&A JSON file\n",
-    "    openai_api_key = \"your_openai_api_key\"  # Replace with your OpenAI API key\n",
+    "    openai_api_key = OPENAI_API_KEY  # Replace with your OpenAI API key\n",
     "    \n",
     "    # Generate and save the summary\n",
-    "    main(pdf_file, json_file, openai_api_key)"
+    "    main(pdf_file, json_file, openai_api_key)\n"
    ]
   }
  ],
