--- a/agentic rag trials/phi-3-mini-4k-instruct.ipynb
+++ b/agentic rag trials/phi-3-mini-4k-instruct.ipynb
@@ -1700,6 +1700,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
+   "display_name": "linkedinbot_venv",
    "language": "python",
    "name": "python3"
   },
